@@ -1,5 +1,7 @@
 import time
 
+import omero
+
 import bl.vl.utils as vu
 from bl.vl.utils.ome_utils import make_unique_key, time2rtime
 
@@ -16,4 +18,11 @@ def assign_vid_and_timestamp(conf, time_stamp_field='startDate'):
 
 
 def ome_hash(ome_obj):
-  return hash((ome_obj.__class__.__name__, ome_obj.id._val))
+  klass = ome_obj.__class__
+  for i, k in enumerate(ome_obj.__class__.__mro__):
+    if k is omero.model.IObject:
+      try:
+        klass = ome_obj.__class__.__mro__[i-1]
+      except IndexError:
+        pass
+  return hash((klass.__name__, ome_obj.id._val))
